Finish the assets with CRUD function
