# docs/swagger.json
@@ -16,6 +16,43 @@
     "basePath": "/api/v1",
     "paths": {
         "/assets": {
+            "get": {
+                "description": "Get assets based on the provided asset type",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Assets",
+                    "assets"
+                ],
+                "summary": "Get assets by asset type",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Asset type to filter by",
+                        "name": "asset_type",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The assets list",
+                        "schema": {
+                            "type": "object"
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -107,7 +144,7 @@
             }
         },
         "/assets/modify": {
-            "post": {
+            "put": {
                 "security": [
                     {
                         "Authorization": []
@@ -126,6 +163,13 @@
                 "summary": "Modify an existing asset",
                 "operationId": "modifyExistingAsset",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Asset id to modify",
+                        "name": "asset_id",
+                        "in": "query",
+                        "required": true
+                    },
                     {
                         "description": "JSON payload containing data for modifying the asset",
                         "name": "input",
