# internal/property-listing-service/server/server.go
@@ -34,6 +34,58 @@ const (
 	AMENITY_ASSET_TYPE  = "amenity"
 )
 
+func (s *GRPCPropertyListingServer) GetAssets(ctx context.Context, req *proto.GetAssetsRequest) (*proto.GetAssetsResponse, error) {
+	if req.AssetType == CATEGORY_ASSET_TYPE {
+		assets, err := s.categorySvc.GetCategories()
+
+		if err != nil {
+			return &proto.GetAssetsResponse{}, err
+		}
+
+		// Convert models.Category
+		var convertedAssets []*proto.Assets
+		for _, asset := range assets {
+			convertedAsset := &proto.Assets{
+				// Map fields from models.Category
+				Id:      uint32(asset.ID),
+				IconURL: asset.IconURL,
+				Name:    asset.Name,
+			}
+			convertedAssets = append(convertedAssets, convertedAsset)
+		}
+
+		return &proto.GetAssetsResponse{
+			Assets: convertedAssets,
+		}, nil
+	}
+
+	if req.AssetType == AMENITY_ASSET_TYPE {
+		assets, err := s.amenitySvc.GetAmenities()
+
+		if err != nil {
+			return &proto.GetAssetsResponse{}, err
+		}
+
+		// Convert models.Amenity
+		var convertedAssets []*proto.Assets
+		for _, asset := range assets {
+			convertedAsset := &proto.Assets{
+				// Map fields from models.Amenity
+				Id:      uint32(asset.ID),
+				IconURL: asset.IconURL,
+				Name:    asset.Name,
+			}
+			convertedAssets = append(convertedAssets, convertedAsset)
+		}
+
+		return &proto.GetAssetsResponse{
+			Assets: convertedAssets,
+		}, nil
+	}
+
+	return &proto.GetAssetsResponse{}, nil
+}
+
 func (s *GRPCPropertyListingServer) AddAsset(ctx context.Context, req *proto.AddAssetRequest) (*proto.AddAssetResponse, error) {
 	if req.AssetType == CATEGORY_ASSET_TYPE {
 		err := s.categorySvc.CreateCategory(&models.Category{
@@ -66,10 +118,13 @@ func (s *GRPCPropertyListingServer) AddAsset(ctx context.Context, req *proto.Add
 
 func (s *GRPCPropertyListingServer) ModifyAsset(ctx context.Context, req *proto.ModifyAssetRequest) (*proto.ModifyAssetResponse, error) {
 	if req.AssetType == CATEGORY_ASSET_TYPE {
-		err := s.categorySvc.UpdateCategory(&models.Category{
-			Name:    req.Name,
-			IconURL: req.IconURL,
-		})
+		err := s.categorySvc.UpdateCategory(
+			uint(req.Id),
+			&models.Category{
+				Name:    req.Name,
+				IconURL: req.IconURL,
+			},
+		)
 
 		if err != nil {
 			return &proto.ModifyAssetResponse{Success: false}, err
@@ -79,10 +134,13 @@ func (s *GRPCPropertyListingServer) ModifyAsset(ctx context.Context, req *proto.
 	}
 
 	if req.AssetType == AMENITY_ASSET_TYPE {
-		err := s.amenitySvc.UpdateAmenity(&models.Amenity{
-			Name:    req.Name,
-			IconURL: req.IconURL,
-		})
+		err := s.amenitySvc.UpdateAmenity(
+			uint(req.Id),
+			&models.Amenity{
+				Name:    req.Name,
+				IconURL: req.IconURL,
+			},
+		)
 
 		if err != nil {
 			return &proto.ModifyAssetResponse{Success: false}, err
